Butun cihazlara uyumlu veb sayt yaratdiq

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <div class="parentdiv">
 
 
-  <header>
+  <header class="basliq">
     <img src="./images/logo.svg" alt="" />
 
     <!-- alt shift asagi ox -->
 
-    <nav>
+    <nav class="nav-links">
       <a href="">About</a>
       <a href="">Services</a>
       <a href="">Projects</a>
@@ -39,9 +39,12 @@
     <i class="fa-solid fa-bars"></i>
   </header>
 
+
+  <!-- todo introduction start -->
+
   <section class="introduction">
     <div class="intro-left-side">
-      <!-- nested tag  -->
+      <!-- * nested tag  -->
       <h1> <span>I design products </span>
         that delight and 
         inspire people
@@ -66,9 +69,24 @@
     </div>
   </section>
 
-  <footer>
-    <p>Muellif huquqlari qorunur</p>
-  </footer>
+
+    <!-- todo introduction end -->
+
+ <!--todo partnyorlar start -->
+
+
+ <section class="emekdaslar">
+  <h6>Trusted By</h6>
+
+  <div class="shirketler">
+    <img src="./images/emekdaslar/emekdas-1.svg" alt="">
+    <img src="./images/emekdaslar/emekdas-2.svg" alt="">
+    <img src="./images/emekdaslar/emekdas-3.svg" alt="">
+    <img src="./images/emekdaslar/emekdas-4.svg" alt="">
+  </div>
+ </section>
+
+ <!--todo partnyorlar end -->
 
 
 </div>
